--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     --bs-dark-primary: #1c1c1c;
     --bs-main-color: #fff;
     --bs-primary-color: #c6c6c6;
-    --bs-secondary-color: #29a9fd;
+    --bs-secondary-colors: #29a9fd;
     --bs-supporting-color: #c850c0;
 
 }
@@ -87,7 +87,7 @@ button a{
 }
 
 .nav-link:hover{
-    color: var(--bs-secondary-color)!important;
+    color: var(--bs-secondary-colors)!important;
 }
 
 /* Main Section Start */
@@ -99,7 +99,8 @@ button a{
 }
 
 .bg-main{
-    height: 80vh;
+    padding: 3rem 0 9rem 0!important;
+    height: auto;
     position: relative;
 }
 
@@ -152,7 +153,7 @@ button a{
 .icon-span{
     width: 2.5rem;
     height: 2.5rem;
-    background-color: var(--bs-secondary-color);
+    background-color: var(--bs-secondary-colors);
     color: var(--bs-main-color);
 }
 
@@ -218,7 +219,7 @@ button a{
 .carousel-indicators [data-bs-target]{
     width: 0.7rem;
     height: 0.7rem;
-    background-color: var(--bs-secondary-color);     /*Blue Color Problem*/
+    background-color: var(--bs-secondary-colors);  /*Blue Color Problem*/
 }
 
 /* Expert Panel Start */
